--- a/flask/templates/layout.html
+++ b/flask/templates/layout.html
@@ -27,10 +27,10 @@
                             </a>
                             {% endif %}
                             {% if not current_user.is_authenticated %}
-                            <a href="{{ url_for('auth.login') }}" class="navbar-item">
+                            <a href="{{ url_for('view.login') }}" class="navbar-item">
                                 Login
                             </a>
-                            <a href="{{ url_for('auth.signup') }}" class="navbar-item">
+                            <a href="{{ url_for('view.signup') }}" class="navbar-item">
                                 Sign Up
                             </a>
                             {% endif %}
